tests/fixtures/syntax/valid/file_text_equals_heredoc_literal.repor
case "file text_equals heredoc literal" {
  write <"out/result.txt"> ```
    hello
    world
    ```
  $ true
  assert {
    file <"out/result.txt"> text_equals ```
    hello
    world
    ```
  }
}
