tests/fixtures/syntax/invalid/write_step_content_workspace_path_literal.repor
case "write content requires a text value, not a workspace path literal" {
  write <"out.txt"> <"content.txt">
  $ true
  assert {
    exit 0
  }
}
